// UIManager.cs
// Author: Sadikur Rahman
// Description: Controls the UI updates for roles, timers, results, and scores.

using UnityEngine;
using System.Collections.Generic;

public class UIManager : MonoBehaviour
{
    // TODO: Implement controls the ui updates for roles, timers, results, and scores.
}